# test_challenge_1

./: .gitignore  .gitlab-ci.yml  Manifest.yaml  backend-deployment.yaml  backend-service.yaml  docker-compose.test.yaml  docker-compose.yaml  extern-http-claim0-persistentvolumeclaim.yaml  extern-http-cm0-configmap.yaml  extern-http-deployment-flag-patch.yaml  extern-http-deployment.yaml  extern-http-ingress.yaml  extern-http-service.yaml  extern-tcp-claim0-persistentvolumeclaim.yaml  extern-tcp-cm0-configmap.yaml  extern-tcp-deployment-flag-patch.yaml  extern-tcp-deployment-patch.yaml  extern-tcp-deployment.yaml  extern-tcp-service.yaml  flag-secret-patch.yaml  flag.txt  frontend-deployment.yaml  frontend-service.yaml  gitlab-networkpolicy.yaml  ingress.yaml  kdfd-flags-secret-patch.yaml  kdfd-testing-challenge-helper-claim0-persistentvolumeclaim.yaml  kdfd-testing-challenge-helper-cm0-configmap.yaml  kdfd-testing-challenge-helper-deployment.yaml  kustomization.yaml  my_secret.txt  simple-http-claim0-persistentvolumeclaim.yaml  simple-http-cm0-configmap.yaml  simple-http-deployment-flag-patch.yaml  simple-http-deployment.yaml  simple-http-ingress.yaml  simple-http-service.yaml  simple-tcp-claim0-persistentvolumeclaim.yaml  simple-tcp-cm0-configmap.yaml  simple-tcp-deployment-flag-patch.yaml  (+6 more)
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: main.rs  server.py
flags/: chal1  chal2
frontend/: Dockerfile  README.md  angular.json  karma.conf.js  package.json
simple_http/: Dockerfile
simple_tcp/: Dockerfile
test_chal1/: Dockerfile  exploit.py
(+13 files in other folders)
