[package]
name = "backend"
version = "1.0.0"
authors = ["prod1101 <3560209-prod1101@users.noreply.gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-ratelimit = "0.3.1"
actix-cors = "0.5.4"
serde = "1.0.125"
serde_json = "1.0.64"
futures = "0.3.13"
lazy_static = "1.4.0"

[profile.release]
overflow-checks = true
lto = true
panic = 'abort'